--- a/src/input.css
+++ b/src/input.css
@@ -7,6 +7,10 @@
     margin: 0 auto;
     width: min(85%, 1200px);
   }
+  .container--narrow {
+    margin: 0 auto;
+    width: min(90%, 1200px);
+  }
 }
 @layer base {
   h1,
