--- a/docs/output.css
+++ b/docs/output.css
@@ -633,6 +633,10 @@ body,
   max-width: 800px;
 }
 
+.max-w-\[600px\] {
+  max-width: 600px;
+}
+
 .basis-1\/3 {
   flex-basis: 33.333333%;
 }
@@ -823,6 +827,10 @@ body,
   padding-top: 1.25rem;
 }
 
+.text-left {
+  text-align: left;
+}
+
 .text-center {
   text-align: center;
 }
@@ -928,16 +936,61 @@ body,
     margin-right: 0px;
   }
 
+  .xl\:my-auto {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  .xl\:mt-5 {
+    margin-top: 1.25rem;
+  }
+
+  .xl\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
+  .xl\:flex {
+    display: flex;
+  }
+
   .xl\:grid {
     display: grid;
+  }
+
+  .xl\:w-\[30ch\] {
+    width: 30ch;
+  }
+
+  .xl\:w-\[40ch\] {
+    width: 40ch;
+  }
+
+  .xl\:w-\[50ch\] {
+    width: 50ch;
   }
 
   .xl\:max-w-\[2000px\] {
     max-width: 2000px;
   }
 
+  .xl\:max-w-\[30ch\] {
+    max-width: 30ch;
+  }
+
+  .xl\:basis-1\/2 {
+    flex-basis: 50%;
+  }
+
+  .xl\:basis-full {
+    flex-basis: 100%;
+  }
+
   .xl\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .xl\:flex-row-reverse {
+    flex-direction: row-reverse;
   }
 
   .xl\:items-start {
@@ -950,6 +1003,10 @@ body,
 
   .xl\:gap-6 {
     gap: 1.5rem;
+  }
+
+  .xl\:p-32 {
+    padding: 8rem;
   }
 
   .xl\:px-16 {
@@ -967,8 +1024,81 @@ body,
     padding-bottom: 2rem;
   }
 
+  .xl\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .xl\:py-24 {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+
+  .xl\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
+  .xl\:px-14 {
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
+  }
+
+  .xl\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  .xl\:px-32 {
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
+
+  .xl\:px-36 {
+    padding-left: 9rem;
+    padding-right: 9rem;
+  }
+
+  .xl\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .xl\:py-10 {
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+  }
+
+  .xl\:py-5 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+  }
+
+  .xl\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .xl\:py-6 {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
+  .xl\:px-24 {
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
+
   .xl\:pt-8 {
     padding-top: 2rem;
+  }
+
+  .xl\:pb-0 {
+    padding-bottom: 0px;
+  }
+
+  .xl\:pt-0 {
+    padding-top: 0px;
   }
 
   .xl\:text-left {
@@ -978,5 +1108,32 @@ body,
   .xl\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .xl\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .xl\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .xl\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .xl\:leading-8 {
+    line-height: 2rem;
+  }
+
+  .xl\:leading-10 {
+    line-height: 2.5rem;
+  }
+
+  .xl\:tracking-wide {
+    letter-spacing: 0.025em;
   }
 }
