--- a/docs/output.css
+++ b/docs/output.css
@@ -629,10 +629,6 @@ body,
   max-width: 2000px;
 }
 
-.max-w-\[800px\] {
-  max-width: 800px;
-}
-
 .max-w-\[600px\] {
   max-width: 600px;
 }
@@ -675,6 +671,10 @@ body,
 
 .gap-8 {
   gap: 2rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .whitespace-nowrap {
@@ -827,10 +827,6 @@ body,
   padding-top: 1.25rem;
 }
 
-.text-left {
-  text-align: left;
-}
-
 .text-center {
   text-align: center;
 }
@@ -931,6 +927,10 @@ body,
 }
 
 @media (min-width: 1280px) {
+  .xl\:col-start-3 {
+    grid-column-start: 3;
+  }
+
   .xl\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
@@ -939,10 +939,6 @@ body,
   .xl\:my-auto {
     margin-top: auto;
     margin-bottom: auto;
-  }
-
-  .xl\:mt-5 {
-    margin-top: 1.25rem;
   }
 
   .xl\:mt-10 {
@@ -957,24 +953,24 @@ body,
     display: grid;
   }
 
-  .xl\:w-\[30ch\] {
-    width: 30ch;
-  }
-
-  .xl\:w-\[40ch\] {
-    width: 40ch;
+  .xl\:h-full {
+    height: 100%;
   }
 
   .xl\:w-\[50ch\] {
     width: 50ch;
   }
 
-  .xl\:max-w-\[2000px\] {
-    max-width: 2000px;
+  .xl\:w-full {
+    width: 100%;
   }
 
-  .xl\:max-w-\[30ch\] {
-    max-width: 30ch;
+  .xl\:w-4\/5 {
+    width: 80%;
+  }
+
+  .xl\:max-w-\[2000px\] {
+    max-width: 2000px;
   }
 
   .xl\:basis-1\/2 {
@@ -989,24 +985,73 @@ body,
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .xl\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .xl\:flex-row {
+    flex-direction: row;
+  }
+
   .xl\:flex-row-reverse {
     flex-direction: row-reverse;
+  }
+
+  .xl\:place-items-start {
+    place-items: start;
+  }
+
+  .xl\:place-items-center {
+    place-items: center;
   }
 
   .xl\:items-start {
     align-items: flex-start;
   }
 
+  .xl\:items-center {
+    align-items: center;
+  }
+
   .xl\:justify-start {
     justify-content: flex-start;
+  }
+
+  .xl\:justify-center {
+    justify-content: center;
+  }
+
+  .xl\:justify-between {
+    justify-content: space-between;
+  }
+
+  .xl\:justify-around {
+    justify-content: space-around;
   }
 
   .xl\:gap-6 {
     gap: 1.5rem;
   }
 
-  .xl\:p-32 {
-    padding: 8rem;
+  .xl\:gap-5 {
+    gap: 1.25rem;
+  }
+
+  .xl\:gap-12 {
+    gap: 3rem;
+  }
+
+  .xl\:gap-x-12 {
+    -moz-column-gap: 3rem;
+         column-gap: 3rem;
+  }
+
+  .xl\:place-self-center {
+    place-self: center;
+  }
+
+  .xl\:p-0 {
+    padding: 0px;
   }
 
   .xl\:px-16 {
@@ -1014,74 +1059,9 @@ body,
     padding-right: 4rem;
   }
 
-  .xl\:py-3 {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-  }
-
-  .xl\:py-8 {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-  }
-
-  .xl\:px-12 {
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
-
-  .xl\:py-24 {
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-  }
-
-  .xl\:px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-
-  .xl\:px-14 {
-    padding-left: 3.5rem;
-    padding-right: 3.5rem;
-  }
-
   .xl\:px-20 {
     padding-left: 5rem;
     padding-right: 5rem;
-  }
-
-  .xl\:px-32 {
-    padding-left: 8rem;
-    padding-right: 8rem;
-  }
-
-  .xl\:px-36 {
-    padding-left: 9rem;
-    padding-right: 9rem;
-  }
-
-  .xl\:py-2 {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-  }
-
-  .xl\:py-10 {
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
-  }
-
-  .xl\:py-5 {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-  }
-
-  .xl\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
-  .xl\:py-6 {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
   }
 
   .xl\:px-24 {
@@ -1089,25 +1069,45 @@ body,
     padding-right: 6rem;
   }
 
+  .xl\:px-36 {
+    padding-left: 9rem;
+    padding-right: 9rem;
+  }
+
+  .xl\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
+  .xl\:py-5 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+  }
+
+  .xl\:py-8 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
+  .xl\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
   .xl\:pt-8 {
     padding-top: 2rem;
   }
 
-  .xl\:pb-0 {
-    padding-bottom: 0px;
+  .xl\:pt-5 {
+    padding-top: 1.25rem;
   }
 
-  .xl\:pt-0 {
-    padding-top: 0px;
+  .xl\:pb-3 {
+    padding-bottom: 0.75rem;
   }
 
   .xl\:text-left {
     text-align: left;
-  }
-
-  .xl\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
   }
 
   .xl\:text-2xl {
@@ -1115,22 +1115,14 @@ body,
     line-height: 2rem;
   }
 
-  .xl\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
+  .xl\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .xl\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
-  }
-
-  .xl\:leading-8 {
-    line-height: 2rem;
-  }
-
-  .xl\:leading-10 {
-    line-height: 2.5rem;
   }
 
   .xl\:tracking-wide {
