--- a/docs/output.css
+++ b/docs/output.css
@@ -926,6 +926,94 @@ body,
     url(assets/fonts/Open_Sans/static/OpenSans-Bold.ttf);
 }
 
+.hover\:text-opacity-85:hover {
+  --tw-text-opacity: 0.85;
+}
+
+.hover\:text-opacity-30:hover {
+  --tw-text-opacity: 0.3;
+}
+
+.hover\:text-opacity-10:hover {
+  --tw-text-opacity: 0.1;
+}
+
+.hover\:text-opacity-0:hover {
+  --tw-text-opacity: 0;
+}
+
+.hover\:text-opacity-70:hover {
+  --tw-text-opacity: 0.7;
+}
+
+.hover\:text-opacity-80:hover {
+  --tw-text-opacity: 0.8;
+}
+
+.hover\:opacity-80:hover {
+  opacity: 0.8;
+}
+
+.hover\:opacity-60:hover {
+  opacity: 0.6;
+}
+
+.hover\:opacity-40:hover {
+  opacity: 0.4;
+}
+
+.hover\:opacity-90:hover {
+  opacity: 0.9;
+}
+
+.hover\:opacity-85:hover {
+  opacity: 0.85;
+}
+
+.hover\:opacity-65:hover {
+  opacity: 0.65;
+}
+
+.hover\:opacity-70:hover {
+  opacity: 0.7;
+}
+
+.focus-visible\:text-opacity-70:focus-visible {
+  --tw-text-opacity: 0.7;
+}
+
+.focus-visible\:text-opacity-80:focus-visible {
+  --tw-text-opacity: 0.8;
+}
+
+.focus-visible\:opacity-80:focus-visible {
+  opacity: 0.8;
+}
+
+.focus-visible\:opacity-60:focus-visible {
+  opacity: 0.6;
+}
+
+.focus-visible\:opacity-40:focus-visible {
+  opacity: 0.4;
+}
+
+.focus-visible\:opacity-90:focus-visible {
+  opacity: 0.9;
+}
+
+.focus-visible\:opacity-85:focus-visible {
+  opacity: 0.85;
+}
+
+.focus-visible\:opacity-65:focus-visible {
+  opacity: 0.65;
+}
+
+.focus-visible\:opacity-70:focus-visible {
+  opacity: 0.7;
+}
+
 @media (min-width: 1280px) {
   .xl\:col-start-3 {
     grid-column-start: 3;
